[package]
name = "sample"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = "0.8"
lazy_static = "1.4"
sha2 = "0.10"  # For the SHA-256 hashing function
hex = "0.4"      # For converting bytes to hex string